convert/objects/SelaProductLineItem__c.object
<CustomObject>
    <label>SELA Product LineItem</label>
    <nameField>
        <displayFormat>SELAProduct{000000}</displayFormat>
        <label>SELA Product LineItem</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AddOnQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Add On Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddOnTotalSubscriptionPrice__c</fullName>
        <label>Add On Total Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SELAProduct__c</fullName>
        <label>SELA Product</label>
        <referenceTo>SelaProduct__c</referenceTo>
        <relationshipLabel>SELA Product LineItem</relationshipLabel>
        <relationshipName>SELAProductLineItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SELA__c</fullName>
        <label>SELA</label>
        <referenceTo>Sela__c</referenceTo>
        <relationshipLabel>SELA Product</relationshipLabel>
        <relationshipName>SelaProductLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalListPrice__c</fullName>
        <label>TotalListPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSubscriptionPrice__c</fullName>
        <label>Total Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>